--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,28 +21,29 @@ classifiers = [
 ]
 
 dependencies = [
-"coverage[toml]",
- "toml",
- "gymnasium",
- "pillow",
- "numpy==1.26.4",
- "opencv-python",
- "pydantic_numpy==5.0.2",
- "anthropic",
- "openai",
- "anthropic",
- "backoff",
- "pydantic",
- "torch",
- "h5py",
- "click",
- "datasets",
- "jsonref",
- "art",
- "transformers",
- "gradio",
- "gradio_client",
- "xarm-python-sdk"
+    'anthropic',
+    'anthropic',
+    'art',
+    'backoff',
+    'click',
+    'coverage[toml]',
+    'datasets',
+    'embdata==0.0.12',
+    'gradio',
+    'gradio_client',
+    'gymnasium',
+    'h5py',
+    'jsonref',
+    'numpy==1.26.4',
+    'openai',
+    'opencv-python',
+    'pillow',
+    'pydantic',
+    'pydantic_numpy==5.0.2',
+    'toml',
+    'torch',
+    'transformers',
+    'xarm-python-sdk',
 ]
 [project.optional-dependencies]
 audio = [
