--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,21 +21,29 @@ classifiers = [
 ]
 
 dependencies = [
-  "anthropic",
-  "art",
-  "backoff",
-  "click",
-  "datasets",
-  "gymnasium",
-  "h5py",
-  "jsonref",
-  "numpy==1.26.4",
-  "openai",
-  "pillow",
-  "pydantic",
-  "pydantic_numpy==5.0.2",
-  "gradio",
-  "gradio_client",
+    'anthropic',
+    'anthropic',
+    'art',
+    'backoff',
+    'click',
+    'coverage[toml]',
+    'datasets',
+    'embdata==0.0.12',
+    'gradio',
+    'gradio_client',
+    'gymnasium',
+    'h5py',
+    'jsonref',
+    'numpy==1.26.4',
+    'openai',
+    'opencv-python',
+    'pillow',
+    'pydantic',
+    'pydantic_numpy==5.0.2',
+    'toml',
+    'torch',
+    'transformers',
+    'xarm-python-sdk',
 ]
 [project.optional-dependencies]
 extras = ["xarm-python-sdk", "opencv-python", "torch", "transformers"]
