--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,39 +21,28 @@ classifiers = [
 ]
 
 dependencies = [
-  "anthropic",
-  "art",
-  "backoff",
-  "click",
-  "datasets",
-  "gymnasium",
-  "h5py",
-  "jsonref",
-  "numpy==1.26.4",
-  "openai",
-  "pillow",
-  "pydantic",
-  "pydantic_numpy==5.0.2",
-  "gradio",
-  "gradio_client",
+    'anthropic',
+    'art',
+    'backoff',
+    'click',
+    'datasets',
+    'gymnasium',
+    'h5py',
+    'jsonref',
+    'numpy==1.26.4',
+    'openai',
+    'pillow',
+    'pydantic',
+    'pydantic_numpy==5.0.2',
+    'gradio',
+    'gradio_client',
+    'embdata',
 ]
 [project.optional-dependencies]
 extras = ["xarm-python-sdk", "opencv-python", "torch", "transformers"]
 audio = ["playsound", "pyaudio", "openai-whisper"]
-all = [
-  "xarm-python-sdk",
-  "opencv-python",
-  "torch",
-  "transformers",
-  "playsound",
-  "pyaudio",
-  "openai-whisper",
-  "open3d",
-  "timm",
-  "torchvision",
-  "wandb",
-
-]
+all = ["open3d", "openai-whisper", "opencv-python", "playsound", "pyaudio", "pyrealsense2", "pyrealsense2-macosx", "timm", "torch", "torchvision", "transformers", "wandb", "xarm-python-sdk"]
+macos = ["pyrealsense2-macosx"]
 [project.urls]
 Documentation = "https://github.com/mbodiai/embodied-agents#readme"
 Issues = "https://github.com/mbodiai/embodied-agents/issues"
@@ -70,12 +59,17 @@ allow-direct-references = true
 
 [tool.hatch.build.targets.wheel.force-include]
 "resources" = "mbodied/resources"
-"data" = "mbodied/data"
+
 
 [tool.hatch.envs.default]
 python = "3.11"
 path = ".mbodied/envs/mbodied"
-dependencies = ["pytest", "pytest-mock", "pytest-asyncio"]
+dependencies = [
+    'mypy',
+    'pytest',
+    'pytest-asyncio',
+    'pytest-mock',
+]
 
 [tool.hatch.envs.default.env-vars]
 
