--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
-
+build-requires = ["hatchling"]
 [project]
 name = "mbodied"
 dynamic = ["version"]
@@ -36,16 +36,22 @@ dependencies = [
   "pydantic_numpy==5.0.2",
   "gradio",
   "gradio_client",
+  "asyncio>=3.4.3",
+  "pytest-asyncio>=0.24.0",
+  "more-itertools>=10.5.0",
+  "python-dotenv>=1.0.1",
 ]
 [project.optional-dependencies]
 extras = ["xarm-python-sdk", "opencv-python", "torch", "transformers"]
-audio = ["playsound", "pyaudio", "openai-whisper"]
+audio = [
+ "pyaudio",
+ "openai-whisper",
+]
 all = [
   "xarm-python-sdk",
   "opencv-python",
   "torch",
   "transformers",
-  "playsound",
   "pyaudio",
   "openai-whisper",
   "open3d",
