--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,13 +33,15 @@ dependencies = [
   "openai",
   "pillow",
   "pydantic",
-  "pydantic_numpy==5.0.2",
   "gradio",
   "gradio_client",
   "asyncio>=3.4.3",
   "pytest-asyncio>=0.24.0",
   "more-itertools>=10.5.0",
   "python-dotenv>=1.0.1",
+  "mbodied",
+  "compress-pickle>=2.1.0",
+  "ruamel-yaml>=0.18.6",
 ]
 [project.optional-dependencies]
 extras = ["xarm-python-sdk", "opencv-python", "torch", "transformers"]
@@ -220,6 +222,9 @@ indent-style = "space"
 skip-magic-trailing-comma = false
 # Like Black, automatically detect the appropriate line ending.
 line-ending = "auto"
+
+[tool.uv.sources]
+mbodied = { workspace = true }
 
 [tool.ruff.lint.pydocstyle]
 convention = "google"
