--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ dependencies = [
   "mbodied",
   "compress-pickle>=2.1.0",
   "ruamel-yaml>=0.18.6",
+  "networkx>=3.3",
 ]
 [project.optional-dependencies]
 extras = ["xarm-python-sdk", "opencv-python", "torch", "transformers"]
